Add terraria to homepage

--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
     <h2>Select a Game</h2>
     <div class="games-grid">
       <a href="ds1/index.html" class="game-card">
-        <!-- <img src="https://assets.xboxservices.com/assets/70/26/70261708-de2c-4bef-b7ba-9b3e4be644d5.jpg"
-          alt="Dark Souls"> -->
+        <!-- <img src="" alt="Dark Souls"> -->
         <div class="game-card-content">
           <h2>Dark Souls 1</h2>
           <p>Complete guide to all achievements in Dark Souls: Remastered.</p>
@@ -100,10 +99,18 @@
       </a>
 
       <a href="gbfr/index.html" class="game-card">
-        <!-- <img src="https://assetsio.reedpopcdn.com/granblue-fantasy-relink-head-image.jpg" alt="Granblue Fantasy Relink"> -->
+        <!-- <img src="" alt="Granblue Fantasy Relink"> -->
         <div class="game-card-content">
           <h2>Granblue Fantasy: Relink</h2>
           <p>Complete guide to all achievements in Granblue Fantasy Relink.</p>
+        </div>
+      </a>
+
+      <a href="terraria/index.html" class="game-card">
+        <!-- <img src="" alt="Terraria"> -->
+        <div class="game-card-content">
+          <h2>Terraria</h2>
+          <p>Complete guide to all achievements in Terraria.</p>
         </div>
       </a>
     </div>
