--- a/terraria/achievements/collector/index.html
+++ b/terraria/achievements/collector/index.html
@@ -18,10 +18,10 @@
         [more info]
     </p>
 
-    <div class="achievement-card" data-id="collector-1">
+    <div class="achievement-card" data-id="challenger-1">
         <h3 class="achievement-name">[achievement]</h3>
         <p class="achievement-description">
-            Catch and collect one of every fish species in Terraria.
+            [description]
         </p>
         <div class="achievement-meta">
             <span class="reward">Reward: [any rewards]</span>
@@ -35,7 +35,7 @@
 
     <div class="tips-section">
         <div class="tips-header">
-            <h3 class="tips-title">Collection Tips</h3>
+            <h3 class="tips-title">Challenger Tips</h3>
         </div>
         <div class="tip-item">
         </div>
