--- a/terraria/achievements/challenger/index.html
+++ b/terraria/achievements/challenger/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terraria Achievements - [achievement]</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -51,7 +51,7 @@
         <p>Created with ♥ for Terraria achievement hunters</p>
     </footer>
 
-    <script src="scripts.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
