Remove unneeded code

--- a/terraria/index.html
+++ b/terraria/index.html
@@ -371,22 +371,9 @@
             quote: "Obtain the Terrarian.",
             description: "Get the Terrarian.",
             type: "Collector",
-            notes: ""
+            notes: "",
+            percent: "21.6%"
         };
-
-        // Preset achievement data
-        const presetAchievements = [
-            { name: "Sick Throw", quote: "Obtain the Terrarian.", description: "Get the Terrarian.", type: "Collector", notes: "" },
-            { name: "Star Destroyer", quote: "Defeat a Fallen Star.", description: "Kill a Fallen Star.", type: "Slayer", notes: "Fallen Stars land at night and can be hit with weapons." },
-            { name: "Get Wood", quote: "Mine your first piece of Wood.", description: "Chop down your first tree.", type: "Explorer", notes: "Use an axe on trees" },
-            { name: "No Hobo", quote: "Build a House.", description: "Create valid housing.", type: "Builder", notes: "Requires walls, light source, table, and chair" },
-            { name: "Like a Boss", quote: "Defeat your first Boss.", description: "Defeat your first boss enemy.", type: "Slayer", notes: "King Slime, Eye of Cthulhu, etc." },
-            { name: "Heart Breaker", quote: "Mine your first Life Crystal.", description: "Destroy a Life Crystal.", type: "Explorer", notes: "Found underground" },
-            { name: "It's Hard!", quote: "Enter Hardmode.", description: "Defeat the Wall of Flesh.", type: "Slayer", notes: "Summon in the Underworld" },
-            { name: "Boned", quote: "Die while an arrow is stuck in your head.", description: "Die with an arrow in your head.", type: "Explorer", notes: "Get hit by Skeleton Archer" },
-            { name: "The Cavalry", quote: "Tame a mount.", description: "Obtain and use a mount item.", type: "Collector", notes: "" },
-            { name: "Til Death", quote: "Get married.", description: "Purchase and use a Wedding Ring.", type: "Social", notes: "" }
-        ];
 
         let achievements = [];
         let completionStatus = {};
