Fix reminiscence link

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -330,7 +330,7 @@
             <h2>Special Achievements</h2>
 
             <div class="achievement-card" data-name="Reminiscence">
-                <h3 class="achievement-title"><a href="fieldnotes.html">Reminiscence</a></h3>
+                <h3 class="achievement-title"><a href="achievements/reminiscence/index.html">Reminiscence</a></h3>
                 <label class="toggle-container">
                     <input type="checkbox" id="fieldnotes-toggle" data-achievement="fieldnotes"
                         onchange="toggleAchievement(this)">
