Remove temporary achievement name

--- a/terraria/achievements/matching-attire.html
+++ b/terraria/achievements/matching-attire.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terraria Achievements - [achievement]</title>
+    <title>Terraria Achievements - Matching Attire</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
-        <h1>[achievement]</h1>
+        <h1>Matching Attire</h1>
         <p class="subtitle">[description]</p>
     </header>
 
@@ -19,7 +19,7 @@
     </p>
 
     <div class="achievement-card" data-id="challenger-1">
-        <h3 class="achievement-name">[achievement]</h3>
+        <h3 class="achievement-name">Matching Attire</h3>
         <p class="achievement-description">
             [description]
         </p>
