--- a/terraria/achievements/timber.html
+++ b/terraria/achievements/timber.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Timber!!</h1>
-        <p class="subtitle">[description]</p>
+        <p class="subtitle">Chop down your first tree.</p>
     </header>
 
     <p class="category-description">
@@ -21,7 +21,7 @@
     <div class="achievement-card" data-id="challenger-1">
         <h3 class="achievement-name">Timber!!</h3>
         <p class="achievement-description">
-            [description]
+            Chop down your first tree.
         </p>
         <div class="achievement-meta">
             <span class="reward">Reward: [any rewards]</span>
