--- a/terraria/achievements/you-can-do-it.html
+++ b/terraria/achievements/you-can-do-it.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>You Can Do It!</h1>
-        <p class="subtitle">[description]</p>
+        <p class="subtitle">Survive your character's first full night.</p>
     </header>
 
     <p class="category-description">
@@ -21,7 +21,7 @@
     <div class="achievement-card" data-id="explorer-1">
         <h3 class="achievement-name">You Can Do It!</h3>
         <p class="achievement-description">
-            [description]
+            Survive your character's first full night.
         </p>
         <div class="achievement-meta">
             <span class="reward">Reward: [any rewards]</span>
