Add full description

--- a/terraria/achievements/ooo-shiny.html
+++ b/terraria/achievements/ooo-shiny.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Ooo! Shiny!</h1>
-        <p class="subtitle">[description]</p>
+        <p class="subtitle">Mine your first nugget of ore with a pickaxe.</p>
     </header>
 
     <p class="category-description">
@@ -21,7 +21,7 @@
     <div class="achievement-card" data-id="explorer-1">
         <h3 class="achievement-name">Ooo! Shiny!</h3>
         <p class="achievement-description">
-            [description]
+            Mine your first nugget of ore with a pickaxe.
         </p>
         <div class="achievement-meta">
             <span class="reward">Reward: [any rewards]</span>
