--- a/terraria/achievements/no-hobo.html
+++ b/terraria/achievements/no-hobo.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>No Hobo</h1>
-        <p class="subtitle">[description]</p>
+        <p class="subtitle">Build a house suitable enough for your first town NPC, such as the guide, to move into.</p>
     </header>
 
     <p class="category-description">
@@ -21,7 +21,7 @@
     <div class="achievement-card" data-id="explorer-1">
         <h3 class="achievement-name">No Hobo</h3>
         <p class="achievement-description">
-            [description]
+            Build a house suitable enough for your first town NPC, such as the guide, to move into.
         </p>
         <div class="achievement-meta">
             <span class="reward">Reward: [any rewards]</span>
