--- a/terraria/achievements/matching-attire.html
+++ b/terraria/achievements/matching-attire.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Matching Attire</h1>
-        <p class="subtitle">[description]</p>
+        <p class="subtitle">Equip armor in all three armor slots: head, chest, and feet.</p>
     </header>
 
     <p class="category-description">
@@ -21,7 +21,7 @@
     <div class="achievement-card" data-id="challenger-1">
         <h3 class="achievement-name">Matching Attire</h3>
         <p class="achievement-description">
-            [description]
+            Equip armor in all three armor slots: head, chest, and feet.
         </p>
         <div class="achievement-meta">
             <span class="reward">Reward: [any rewards]</span>
