--- a/terraria/achievements/stop-hammer-time.html
+++ b/terraria/achievements/stop-hammer-time.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Stop! Hammer Time!</h1>
-        <p class="subtitle">[description]</p>
+        <p class="subtitle">Obtain your first hammer via crafting or otherwise.</p>
     </header>
 
     <p class="category-description">
@@ -21,7 +21,7 @@
     <div class="achievement-card" data-id="challenger-1">
         <h3 class="achievement-name">Stop! Hammer Time!</h3>
         <p class="achievement-description">
-            [description]
+            Obtain your first hammer via crafting or otherwise.
         </p>
         <div class="achievement-meta">
             <span class="reward">Reward: [any rewards]</span>
