--- a/terraria/achievements/i-am-loot.html
+++ b/terraria/achievements/i-am-loot.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>I Am Loot!</h1>
-        <p class="subtitle">[description]</p>
+        <p class="subtitle">Discover a golden chest underground and take a peek at its contents.</p>
     </header>
 
     <p class="category-description">
@@ -21,7 +21,7 @@
     <div class="achievement-card" data-id="explorer-1">
         <h3 class="achievement-name">I Am Loot!</h3>
         <p class="achievement-description">
-            [description]
+            Discover a golden chest underground and take a peek at its contents.
         </p>
         <div class="achievement-meta">
             <span class="reward">Reward: [any rewards]</span>
