--- a/terraria/achievements/benched.html
+++ b/terraria/achievements/benched.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Benched</h1>
-        <p class="subtitle">[description]</p>
+        <p class="subtitle">Craft your first work bench.</p>
     </header>
 
     <p class="category-description">
@@ -21,7 +21,7 @@
     <div class="achievement-card" data-id="challenger-1">
         <h3 class="achievement-name">Benched</h3>
         <p class="achievement-description">
-            [description]
+            Craft your first work bench.
         </p>
         <div class="achievement-meta">
             <span class="reward">Reward: [any rewards]</span>
