Add difficulty for achievement

--- a/terraria/achievements/timber.html
+++ b/terraria/achievements/timber.html
@@ -27,7 +27,7 @@
             <span class="reward">Reward: [any rewards]</span>
             <div class="difficulty">
                 Difficulty:
-                <span class="difficulty-meter">★★★★☆</span>
+                <span class="difficulty-meter">★☆☆☆☆</span>
             </div>
         </div>
     </div>
