Fix difficulty tag for way of white achievement

--- a/ds1/index.html
+++ b/ds1/index.html
@@ -287,7 +287,7 @@
         id: "covenant-way-of-white",
         title: "Covenant: Way of White",
         description: "Discover Way of White covenant",
-        difficulty: "Medium",
+        difficulty: "Easy",
         category: "Covenant"
       },
       {
