Add description of way of white covenant

--- a/ds1/achievements/covenant-way-of-white/index.html
+++ b/ds1/achievements/covenant-way-of-white/index.html
@@ -258,7 +258,8 @@
                     can have consequences.</li>
             </ul>
             <p>The <strong>Way of White</strong> is a good starting point for new players. It's easy to join, has
-                minimal downsides, and helps you stay clear of early invasions if you're playing online.</p>
+                minimal downsides, and helps you stay clear of early invasions if you're playing online. It is the only
+                covenant (alongside Princess's Guard) that does not have a ranking system.</p>
         </div>
 
 
