--- a/ds1/achievements/reach-lordran/index.html
+++ b/ds1/achievements/reach-lordran/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enkindle</title>
+    <title>[achievement]</title>
     <style>
         :root {
             --background: #121212;
@@ -185,42 +185,79 @@
 
 <body>
     <header>
-        <h1>Dark Souls Achievements</h1>
+        <h1>Dark Souls: Remastered Achievements</h1>
     </header>
 
     <div class="breadcrumbs">
         <a href="../../../index.html">Home</a> >
-        <a href="../../index.html">Dark Souls</a> >
-        Enkindle
+        <a href="../../index.html">Dark Souls: Remastered</a> >
+        [achievement]
     </div>
 
     <div class="achievement-container">
         <div class="achievement-header">
             <div class="achievement-info">
-                <h2 class="achievement-title">Enkindle</h2>
-                <p class="achievement-description">Acquire all rare weapons</p>
+                <h2 class="achievement-title">[achievement]</h2>
+                <p class="achievement-description">[achievement]</p>
             </div>
-            <span class="difficulty-tag">Easy</span>
+            <span class="difficulty-tag">[diff]</span>
         </div>
 
         <div class="guide-section">
             <h3>Overview</h3>
-            <p>The Enkindle achievement is the first achievement that you will obtain in DS1. As such, it is also the
-                easiest.</p>
-            <p>You'll need to exit the starting area, read the tutorial signs on the ground (optional, but recommended),
-                and continue until you reach a ladder. Upon climbing the ladder, there will be a bonfire outside in the
-                courtyard. Simply interact with the bonfire, and you will unlock this achievement.</p>
+            <p>Quick tagline.</p>
+            <p>Deeper explanation.</p>
         </div>
 
         <div class="guide-section">
             <h3>Additional Information</h3>
-            <p>How bonfires work in Dark Souls:</p>
+            <p>Information on [input]:</p>
             <ol>
-                <li>Recover lost HP</li>
-                <li>Allows for level ups</li>
-                <li>Refill estus flasks to the maximum (dependent on the kindling of the bonfire; addressed later)</li>
-                <li>Restore humanity/kindle bonfire</li>
-                <li>Eventual further utility will be unlocked through merchant purchases and progression</li>
+                <li>.</li>
+                <li>
+                    nested list:
+                    <ul>
+                        <li>.</li>
+                        <li>
+                            nested list:
+                            <ul>
+                                <li>.</li>
+                                <li>.</li>
+                                <li>.</li>
+                                <li>.</li>
+                            </ul>
+                            <strong>Note:</strong> note
+                        </li>
+                        <li>.</li>
+                        <li>.</li>
+                    </ul>
+                </li>
+            </ol>
+        </div>
+
+        <div class="guide-section">
+            <h3>Additional Information</h3>
+            <p>Information on [input]:</p>
+            <ol>
+                <li>.</li>
+                <li>
+                    nested list:
+                    <ul>
+                        <li>.</li>
+                        <li>
+                            nested list:
+                            <ul>
+                                <li>.</li>
+                                <li>.</li>
+                                <li>.</li>
+                                <li>.</li>
+                            </ul>
+                            <strong>Note:</strong> note
+                        </li>
+                        <li>.</li>
+                        <li>.</li>
+                    </ul>
+                </li>
             </ol>
         </div>
 
