--- a/ds1/achievements/reach-lordran/index.html
+++ b/ds1/achievements/reach-lordran/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[achievement]</title>
+    <title>Reach Lordran</title>
     <style>
         :root {
             --background: #121212;
@@ -191,14 +191,14 @@
     <div class="breadcrumbs">
         <a href="../../../index.html">Home</a> >
         <a href="../../index.html">Dark Souls: Remastered</a> >
-        [achievement]
+        Reach Lordran
     </div>
 
     <div class="achievement-container">
         <div class="achievement-header">
             <div class="achievement-info">
-                <h2 class="achievement-title">[achievement]</h2>
-                <p class="achievement-description">[achievement]</p>
+                <h2 class="achievement-title">Reach Lordran</h2>
+                <p class="achievement-description">Reach Lordran</p>
             </div>
             <span class="difficulty-tag">[diff]</span>
         </div>
