Add achievement tagline

--- a/ds1/achievements/reach-lordran/index.html
+++ b/ds1/achievements/reach-lordran/index.html
@@ -198,7 +198,7 @@
         <div class="achievement-header">
             <div class="achievement-info">
                 <h2 class="achievement-title">Reach Lordran</h2>
-                <p class="achievement-description">Reach Lordran</p>
+                <p class="achievement-description">Arrive in Lordran.</p>
             </div>
             <span class="difficulty-tag">[diff]</span>
         </div>
