Add achievement difficulty

--- a/ds1/achievements/reach-lordran/index.html
+++ b/ds1/achievements/reach-lordran/index.html
@@ -200,7 +200,7 @@
                 <h2 class="achievement-title">Reach Lordran</h2>
                 <p class="achievement-description">Arrive in Lordran.</p>
             </div>
-            <span class="difficulty-tag">[diff]</span>
+            <span class="difficulty-tag">[easy]</span>
         </div>
 
         <div class="guide-section">
