Add tagline for overview

--- a/ds1/achievements/reach-lordran/index.html
+++ b/ds1/achievements/reach-lordran/index.html
@@ -200,12 +200,13 @@
                 <h2 class="achievement-title">Reach Lordran</h2>
                 <p class="achievement-description">Arrive in Lordran.</p>
             </div>
-            <span class="difficulty-tag">[easy]</span>
+            <span class="difficulty-tag">[Easy]</span>
         </div>
 
         <div class="guide-section">
             <h3>Overview</h3>
-            <p>Quick tagline.</p>
+            <p>This achievement is granted upon leaving the starting area (Northern Undead Asylum), and landing at
+                Lordran's Firelink Shrine.</p>
             <p>Deeper explanation.</p>
         </div>
 
