--- a/ds1/achievements/reach-lordran/index.html
+++ b/ds1/achievements/reach-lordran/index.html
@@ -207,7 +207,10 @@
             <h3>Overview</h3>
             <p>This achievement is granted upon leaving the starting area (Northern Undead Asylum), and landing at
                 Lordran's Firelink Shrine.</p>
-            <p>Deeper explanation.</p>
+            <p>Lordran is the area wherein our journey will unfold. We start in firelink shrine after being dropped off
+                by a massive bird. In order to find Lordran, we must approach the end of the cliff after opening the
+                double doors out of the arena where we defeated the asylum demon. This will begin a cutscene where we
+                end at Lordran.</p>
         </div>
 
         <div class="guide-section">
