Fix achievement title

--- a/ds1/achievements/first-bell/index.html
+++ b/ds1/achievements/first-bell/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estus Flask</title>
+    <title>Ring the Bell (Undead Church)</title>
     <style>
         :root {
             --background: #121212;
@@ -191,14 +191,14 @@
     <div class="breadcrumbs">
         <a href="../../../index.html">Home</a> >
         <a href="../../index.html">Dark Souls: Remastered</a> >
-        Estus Flask
+        Ring the Bell (Undead Church)
     </div>
 
     <div class="achievement-container">
         <div class="achievement-header">
             <div class="achievement-info">
-                <h2 class="achievement-title">Estus Flask</h2>
-                <p class="achievement-description">Acquire Estus Flask</p>
+                <h2 class="achievement-title">Ring the Bell (Undead Church)</h2>
+                <p class="achievement-description">Ring the Bell (Undead Church)</p>
             </div>
             <span class="difficulty-tag">Easy</span>
         </div>
