Add information on Asylum Demon

--- a/ds1/achievements/reach-lordran/index.html
+++ b/ds1/achievements/reach-lordran/index.html
@@ -215,9 +215,14 @@
 
         <div class="guide-section">
             <h3>Additional Information</h3>
-            <p>Information on [input]:</p>
+            <p>Information on Northern Undead Asylum:</p>
             <ol>
-                <li>.</li>
+                <li>It <em>is</em> possible to defeat the Asylum Demon before getting the longsword, but completely
+                    optional. There is a gate on the left side toward the back of the room that opens once you enter the
+                    room. Go through there in order to progress. Eventually, you will see a fog wall where you can
+                    plunging attack the Asylum Demon in order to do massive damage at the beginning of the fight. But,
+                    don't linger too long. If you take too long to drop, he will jump and break the ledge, dealing
+                    massive damage to you.</li>
                 <li>
                     nested list:
                     <ul>
