--- a/ds1/achievements/reach-lordran/index.html
+++ b/ds1/achievements/reach-lordran/index.html
@@ -224,48 +224,14 @@
                     don't linger too long. If you take too long to drop, he will jump and break the ledge, dealing
                     massive damage to you.</li>
                 <li>
-                    nested list:
-                    <ul>
-                        <li>.</li>
-                        <li>
-                            nested list:
-                            <ul>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                            </ul>
-                            <strong>Note:</strong> note
-                        </li>
-                        <li>.</li>
-                        <li>.</li>
-                    </ul>
+                    Upon defeating the Asylum Demon, go through the closed doors (walk up to them + interact). You will
+                    be able to unlock them with the key dropped by Asylum Demon. Continue straight out the doors until
+                    you find the edge of the cliff. Walk up toward the edge, and the cutscene will start.
                 </li>
-            </ol>
-        </div>
-
-        <div class="guide-section">
-            <h3>Additional Information</h3>
-            <p>Information on [input]:</p>
-            <ol>
-                <li>.</li>
                 <li>
-                    nested list:
-                    <ul>
-                        <li>.</li>
-                        <li>
-                            nested list:
-                            <ul>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                            </ul>
-                            <strong>Note:</strong> note
-                        </li>
-                        <li>.</li>
-                        <li>.</li>
-                    </ul>
+                    Return to the Northern Undead Asylum <em>is</em> possible. I don't want to reveal spoilers, but
+                    there will be a link eventually found <a href="../../guides/northern-undead-asylum.html">here
+                        </ahref></a>
                 </li>
             </ol>
         </div>
