--- a/ds1/guides/northern-undead-asylum.html
+++ b/ds1/guides/northern-undead-asylum.html
@@ -189,8 +189,8 @@
     </header>
 
     <div class="breadcrumbs">
-        <a href="../../../index.html">Home</a> >
-        <a href="../../index.html">Dark Souls: Remastered</a> >
+        <a href="../../index.html">Home</a> >
+        <a href="../index.html">Dark Souls: Remastered</a> >
         [guide name] guide
     </div>
 
