Update achievement to guide

--- a/ds1/guides/northern-undead-asylum.html
+++ b/ds1/guides/northern-undead-asylum.html
@@ -76,7 +76,7 @@
             text-decoration: underline;
         }
 
-        .achievement-container {
+        .guide-container {
             background-color: rgba(0, 0, 0, 0.7);
             padding: 20px;
             border-radius: 8px;
@@ -84,7 +84,7 @@
             border: 1px solid #333;
         }
 
-        .achievement-header {
+        .guide-header {
             display: flex;
             align-items: center;
             justify-content: space-between;
@@ -93,17 +93,17 @@
             border-bottom: 1px solid #333;
         }
 
-        .achievement-info {
+        .guide-info {
             display: flex;
             flex-direction: column;
         }
 
-        .achievement-title {
+        .guide-title {
             margin: 0 0 10px 0;
             color: var(--primary);
         }
 
-        .achievement-description {
+        .guide-description {
             font-style: italic;
             color: var(--secondary-text);
             margin: 0;
@@ -185,7 +185,7 @@
 
 <body>
     <header>
-        <h1>Dark Souls: Remastered Achievements</h1>
+        <h1>Dark Souls: Remastered Guides</h1>
     </header>
 
     <div class="breadcrumbs">
@@ -194,11 +194,11 @@
         [guide name] guide
     </div>
 
-    <div class="achievement-container">
-        <div class="achievement-header">
-            <div class="achievement-info">
-                <h2 class="achievement-title">[guide name] guide</h2>
-                <p class="achievement-description">[guide name] guide</p>
+    <div class="guide-container">
+        <div class="guide-header">
+            <div class="guide-info">
+                <h2 class="guide-title">[guide name] guide</h2>
+                <p class="guide-description">[guide name] guide</p>
             </div>
             <span class="difficulty-tag">[diff]</span>
         </div>
@@ -261,11 +261,11 @@
             </ol>
         </div>
 
-        <a href="../../index.html" class="back-button">Back to All Achievements</a>
+        <a href="../../index.html" class="back-button">Back to All Guides</a>
     </div>
 
     <footer>
-        <p>Dark Souls: Remastered Achievement Guide - Praise the Sun!</p>
+        <p>Dark Souls: Remastered Guides - Praise the Sun!</p>
     </footer>
 </body>
 
