Update hyperlink for ds1 landing page

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <main>
     <h2>Select a Game</h2>
     <div class="games-grid">
-      <a href="ds1/index.html" class="game-card">
+      <a href="ds1/landing-page.html" class="game-card">
         <!-- <img src="" alt="Dark Souls"> -->
         <div class="game-card-content">
           <h2>Dark Souls 1</h2>
