Update breadcrumbs + bg_img link

--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -37,7 +37,7 @@
       left: 0;
       right: 0;
       bottom: 0;
-      background-image: url("bg_img.jpg");
+      background-image: url("../bg_img.jpg");
       background-size: contain;
       background-position: center;
       filter: blur(10px);
@@ -223,7 +223,7 @@
   </header>
 
   <div class="breadcrumbs">
-    <a href="../index.html">Home</a> > Dark Souls: Remastered
+    <a href="../../index.html">Home</a> > <a href="../landing-page.html">Dark Souls: Remastered</a> > Achievement Guides
   </div>
 
   <div class="game-info">
