--- a/ds1/landing-page.html
+++ b/ds1/landing-page.html
@@ -174,7 +174,7 @@
                 </div>
             </div>
 
-            <div class="navigation-card" onclick="window.location.href='bosses/index.html'">
+            <div class="navigation-card" onclick="window.location.href='boss-guides/landing-page.html'">
                 <div class="navigation-header">
                     <h3>Bosses</h3>
                 </div>
@@ -186,7 +186,7 @@
                 </div>
             </div>
 
-            <div class="navigation-card" onclick="window.location.href='areas/index.html'">
+            <div class="navigation-card" onclick="window.location.href='area-guides/landing-page.html'">
                 <div class="navigation-header">
                     <h3>Areas</h3>
                 </div>
