--- a/ds1/landing-page.html
+++ b/ds1/landing-page.html
@@ -149,14 +149,11 @@
 
 <body>
     <header>
-        <h1>Dark Souls: Remastered Guide</h1>
+        <h1>Dark Souls: Remastered Guides</h1>
     </header>
 
     <div class="game-info">
         <h2>Welcome, Chosen Undead</h2>
-        <p>Thou who art Undead, art chosen. In thine exodus from the Undead Asylum, maketh pilgrimage to the land of
-            Ancient
-            Lords. When thou ringeth the Bell of Awakening, the fate of the Undead thou shalt know.</p>
         <p>Choose your path below to explore different aspects of this comprehensive Dark Souls guide.</p>
     </div>
 
@@ -188,7 +185,7 @@
 
             <div class="navigation-card" onclick="window.location.href='area-guides/landing-page.html'">
                 <div class="navigation-header">
-                    <h3>Areas</h3>
+                    <h3>Locations</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
@@ -201,7 +198,9 @@
     </div>
 
     <footer>
-        <p>Dark Souls: Remastered Guide - Praise the Sun!</p>
+        <p><em>Thou who art Undead, art chosen. In thine exodus from the Undead Asylum, maketh pilgrimage to the land of
+                Ancient
+                Lords. When thou ringeth the Bell of Awakening, the fate of the Undead thou shalt know.</em></p>
     </footer>
 </body>
 
