Add potential implementation for sprites

--- a/ds1/boss-guides/landing-page.html
+++ b/ds1/boss-guides/landing-page.html
@@ -167,6 +167,9 @@
                 <div class="navigation-content">
                     <div>
                         <!-- <div class="nav-icon">⚔️</div> -->
+                        <!-- <div class="nav-icon">
+                            <img src="images/asylum-demon.png" alt="Boss Icon" class="icon-img">
+                        </div> -->
                         <p>Strategies for defeating all bosses</p>
                     </div>
                 </div>
